--- a/package.json
+++ b/package.json
@@ -5,19 +5,27 @@
     "start": "webpack serve --mode=development",
     "build": "run-s clean build-only",
     "build-only": "webpack --mode=production",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "lint": "./node_modules/.bin/eslint .",
+    "lint:fix": "./node_modules/.bin/eslint . --fix"
   },
   "dependencies": {
     "pixi.js": "^6.3.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
     "copy-webpack-plugin": "^10.2.4",
+    "eslint": "^8.26.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.4.0",
+    "eslint-plugin-promise": "^6.1.1",
     "html-webpack-plugin": "^5.5.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.2.8",
-    "typescript": "^4.6.3",
+    "typescript": "^4.8.4",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
