--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "./node_modules/.bin/eslint . --fix"
   },
   "dependencies": {
+    "pixi-webfont-loader": "^1.0.2",
     "pixi.js": "^6.3.0"
   },
   "devDependencies": {
