--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "pixi-webfont-loader": "^1.0.2",
-    "pixi.js": "^6.5.8"
+    "pixi.js": "^6.5.8",
+    "@pixi/sound": "^4.3.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.42.0",
