--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,12 @@ on:
 permissions:
   contents: write
 
-jobs:
-  Build&Deploy:
-    runs-on: ubuntu-latest
+concurrency: gh-pages
 
+jobs:
+
+  Build:
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -28,6 +30,9 @@ jobs:
     - name: Build
       run: npm run build
 
+  Deploy:
+    runs-on: ubuntu-latest
+    steps:
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@v4
       with:
